--- a/ballll/main.html
+++ b/ballll/main.html
@@ -9,18 +9,9 @@
     </head>
     <body style="background-color: #717578">
         <ul id="nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">I</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">stole</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">code becuz I am</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
+            {% for nav_item in nav %}
+                {% include "nav.html" %}
+            {% endfor %}
         </ul>
         <div style="margin-left:25%;padding:1px 16px;height:1000px;">{{ page.content }}</div>
          
