--- a/ballll/main.html
+++ b/ballll/main.html
@@ -4,8 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Yap Yuan Xi</title>
+        
+        <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
+        
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        </script>
+
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{{ "css/theme.css"|url }}">
+
     </head>
     <body style="background-color: #717578">
         <ul id="nav">
