--- a/ballll/main.html
+++ b/ballll/main.html
@@ -11,7 +11,7 @@
         </script>
 
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="{{ "css/theme.css"|url }}">
+        <link rel="stylesheet" href="{{ "style.css"|url }}">
 
     </head>
     <body style="background-color: #717578">
