3000 insanity of css

--- a/ballll/nav.html
+++ b/ballll/nav.html
@@ -6,7 +6,7 @@
     <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
 </li>
 {% else %}
-<details>
+<details class="decodex">
     <summary> {{ nav_item.title }} </summary>
 
     <ul>
