if only I didn't get lost in the code

--- a/ballll/main.html
+++ b/ballll/main.html
@@ -17,6 +17,9 @@
     </head>
     <body style="background-color: #717578">
         <ul id="nav">
+            <li>
+                <img src="/assets/fBkBhzqW29rAWNfKazaXLD6OkJ7VuYTQO6W5oD_YzeE.png"/>
+            </li>
             {% for nav_item in nav %}
                 {% include "nav.html" %}
             {% endfor %}
