--- a/ballll/main.html
+++ b/ballll/main.html
@@ -18,7 +18,7 @@
     <body style="background-color: #717578">
         <ul id="nav">
             <li>
-                <img src="/assets/fBkBhzqW29rAWNfKazaXLD6OkJ7VuYTQO6W5oD_YzeE.png"/>
+                <img src="./assets/fBkBhzqW29rAWNfKazaXLD6OkJ7VuYTQO6W5oD_YzeE.png"/>
             </li>
             {% for nav_item in nav %}
                 {% include "nav.html" %}
