--- a/ballll/nav.html
+++ b/ballll/nav.html
@@ -3,12 +3,12 @@
 -->
 
 {% if not nav_item.children %}
-<li {% if nav_item.active %}class="active"{% endif %}>
+<li {% if nav_item.active %}class="active"{% endif %} class="decodex">
     <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
 </li>
 {% else %}
-<details class="decodex">
-    <summary> {{ nav_item.title }} </summary>
+<details>
+    <summary class="decode"> {{ nav_item.title }} </summary>
 
     <ul>
         {% for nav_item in nav_item.children %}
