--- a/ballll/main.html
+++ b/ballll/main.html
@@ -7,8 +7,7 @@
         
         <title>{% if page.title %}{{ page.title }} - {% endif %}{{ config.site_name }}</title>
         
-        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-        </script>
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="{{ "style.css"|url }}">
