--- a/basic_theme/nav.html
+++ b/basic_theme/nav.html
@@ -1,6 +1,7 @@
 <!--
 
 -->
+<button></button>
 {% if not nav_item.children %}
 <li {% if nav_item.active %}class="active"{% endif %}>
     <a href="{{ nav_item.url|url }}">{{ nav_item.title }}</a>
